--- a/index.html
+++ b/index.html
@@ -421,7 +421,7 @@
         <div class="social-links">
             <a href="mailto:cihangirkankaya@gmail.com"><i class="fas fa-envelope"></i></a>
             <a href="https://github.com/cihangirk-dev" target="_blank"><i class="fab fa-github"></i></a>
-            <a href="https://www.linkedin.com/in/cihangirkankaya/" target="_blank"><i class="fab fa-linkedin"></i></a>
+            <a href="https://www.linkedin.com/in/cihangirkankaya" target="_blank"><i class="fab fa-linkedin"></i></a>
         </div>
         
         <p style="margin-top: 50px; font-size: 0.8rem; color:#444;">© 2025 Cihangir Kankaya. Tüm hakları saklıdır.</p>
